app/shellinabox/namespace.yaml
#@ load("@ytt:data", "data")
---
apiVersion: v1
kind: Namespace
metadata:
  name: #@ data.values.siab.namespace
  metadata:
    labels:
      name: #@ data.values.siab.namespace
