app/shellinabox/deployment.yaml
#@ load("@ytt:data", "data")
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: shellinabox
  namespace: #@ data.values.siab.namespace
spec:
  replicas: 1
  selector:
    matchLabels: #@ data.values.siab.matchLabels
  template:
    metadata:
      labels: #@ data.values.siab.matchLabels
    spec:
      containers:
        - name: shellinabox
          image: nicholasdille/shellinabox
          imagePullPolicy: Always
          ports:
          - name: web
            containerPort: 4200
