app/shellinabox/service.yaml
#@ load("@ytt:data", "data")
---
kind: Service
apiVersion: v1
metadata:
  name: shellinabox
  namespace: #@ data.values.siab.namespace
spec:
  selector: #@ data.values.siab.matchLabels
  ports:
  - name: web
    port: 80
    targetPort: 4200
